# python-geonetwork

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
geonetwork/: __init__.py  exceptions.py  gn_api.py  gn_logger.py  gn_session.py
tests/: test_exceptions.py  test_gn_api.py  test_gn_session.py  test_logger.py
