[project]
name = "geonetwork"
version = "0.1.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "types-requests (>=2.32,<3.0.0)",
]

[project.optional-dependencies]
test = [
     "pytest",
     "pytest-cov",
     "requests-mock",
]

[tool.poetry]
packages = [
  {include = "geonetwork"},
  {include = "geonetwork/py.typed"},
]
